manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-lab
  labels:
    app.kubernetes.io/part-of: keycloak-lab
