manifests/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: keycloak-lab
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: keycloak-lab
spec:
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: keycloak-lab
  ports:
    - port: 5432
      targetPort: 5432
      name: postgresql
