manifests/07-keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak-lab
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak-lab
spec:
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak-lab
  ports:
    - port: 8080
      targetPort: 8080
      name: http
